--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>Vsalgo</title>
+<title>Visalgo</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Favicon -->
 <link rel="shortcut icon" href="logo.png">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
@@ -15,7 +16,6 @@ body, html {
   line-height: 1.8;
 }
 
-/* Full height image header */
 .bgimg-1 {
   background-position: center;
   background-size: cover;
@@ -47,11 +47,11 @@ body, html {
 </style>
 <body>
 
-<!-- Navbar (sit on top) -->
+<!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card" id="myNavbar">
 
-    <!-- Right-sided navbar links -->
+    <!-- Links in navabar -->
     <div class="w3-right w3-hide-small">
     <a href="index.html" class="w3-bar-item w3-button"></i>Home</a>
 	<a href="algorithms.html" class="w3-bar-item w3-button"></i>Algorithms</a>
@@ -64,41 +64,41 @@ body, html {
   </div>
 </div>
 
-<!-- Sidebar on small screens when clicking the menu icon -->
+<!-- For phone users navbar -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
  	<a href="index.html" class="w3-bar-item w3-button"></i>Home</a>
 	<a href="algorithms.html" class="w3-bar-item w3-button"></i>Algorithms</a>
 </nav>
 
-<!-- Header with full-height image -->
+<!-- First page -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Algoritm visualization</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Alogirtm visualization</span><br>
-    <span class="w3-large">Our goal is to create a free website that lets users understand algorithms with visual examples. </span>
+    <span class="w3-jumbo w3-hide-small">Our goal</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Our goal</span><br>
+    <span class="w3-large">Our goal is to create a free website that lets users understand algorithms with visual examples. As well as letting users post their algorithms onto our website </span>
   
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
 </header>
 
-<!-- Header with full-height image -->
+<!-- Second page -->
 <header class="bgimg-2 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">How to use our website</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Alogirtm visualization</span><br>
-    <span class="w3-large">In order to use our website all you have to do is go under the Algorithm tab on the navagation bar and than it will take you to our Algoritm homepage where you can find a variety of algorithms to choose from.</span>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">How to use our website</span><br>
+    <span class="w3-large">In order to use our website all you have to do is go under the Algorithm tab, on the navagation bar, and then it will take you to our Algorithm homepage where you can find a variety of algorithms to choose from.</span>
   
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
 </header>
 
-<!-- Header with full-height image -->
+<!-- Third page -->
 <header class="bgimg-3 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">About us</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Alogirtm visualization</span><br>
-    <span class="w3-large">Front end developer: dillythecoder#3933 <br> Backend developer: Top Of Tech
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">About us</span><br>
+    <span class="w3-large">Front end developer/Algorithm designer: dillythecoder#3933 <br> Algorithm designer: Top Of Tech
 #4867<br> Front end developer/Algorithm Desginer: CodeZhifty#5155</span>
 
   </div> 
