--- a/gnomesort.html
+++ b/gnomesort.html
@@ -168,20 +168,27 @@ footer {
         2. If the current element is larger or equal to the previous array element, take a step right.<br>
         3. If the current element is smaller than the previous array element then swap these two elements and go one step backwards.<br>
         4. Repeat steps 2. and 3. until the index (i) reaches the end of the array (-1).<br>
-        5. If it has reached the end of the array stop moving.</p>
-      <br><br>
+        5. If it has reached the end of the array stop moving.<br>
+
+        <br>Time Complexity is O(N^2)<br><br>
+      <small>Article and code: <a href="https://www.geeksforgeeks.org/gnome-sort-a-stupid-one/">https://www.geeksforgeeks.org/gnome-sort-a-stupid-one/</a></small></p>
+      <br>
       <h4>Video</h4>
-      <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/cGpg_DvthSY" 
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/EdcWAw4Hcu0"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
       <hr>
-      <h4>Code<iframe height="400px" width="100%"
+      <h4>Code</h4>
+      <br>
+      <iframe height="400px" width="100%"
         src="https://repl.it/@REDCODERCOOLMAN/GnomeSort?lite=true" 
         scrolling="no" frameborder="no" allowtransparency="true" 
-        allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe></h4>
+        allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals">
+      </iframe>
       <hr>
       <h4>Useful Links<br><br><br>
-      <a href="https://en.wikipedia.org/wiki/Gnome_sort">https://en.wikipedia.org/wiki/Gnome_sort</a></h4>
+        <a href="https://en.wikipedia.org/wiki/Gnome_sort">https://en.wikipedia.org/wiki/Gnome_sort</a></h4>
       <hr>
  
 
