--- a/postalgorithm.html
+++ b/postalgorithm.html
@@ -282,7 +282,7 @@ footer {
                     Subject : "Algorithm Submition",
                     Body : `<strong>The algorithm name is:</strong> <br> ${algoname.value} <br> <br> <strong>File location:</strong> shorturl.at/xzKMO <br> <br> <strong>Explanation:</strong> <br> ${desc.value}`
                     }).then(
-                    
+                      console.log("Mail is send");
                     );
                 }
 
