--- a/postalgorithm.html
+++ b/postalgorithm.html
@@ -274,7 +274,7 @@ footer {
             <br>
             <br>
             <p>Use winrar or 7zip to make a zip file containing the below</p>
-            <img src="./pyandimg.png">
+            <img src="pyandimg.png">
             <br>
             <h2 style="display: inline; margin-right: 100px;">Image (1024 x 683)</h2>
             <h2 style="display: inline;">algorithm.py file</h2>
