--- a/solarsystem/index.html
+++ b/solarsystem/index.html
@@ -16,5 +16,13 @@
     <div class="webgl-content">
       <div id="unityContainer" style="width: 100vw; height: 100vh"></div>
     </div>
+    <script>
+        document.onkeydown = function(evt) {
+            evt = evt || window.event;
+            if (evt.keyCode == 27) {
+                window.open("https://top-of-tech.github.io/VizCDT/index.html","_self")
+            }
+        };
+    </script>
   </body>
 </html>
