--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <!-- First page -->
   <header class="bgimg-1 w3-display-container w3-grayscale-min" >
-    <div class="w3-display-left w3-text-white" style="padding:48px">
+    <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="our-goal">Our goal</span><br>
       <span class="w3-large" id="our-goal">Our goal is to create a free website that lets users understand algorithms with visual examples. As well as letting users post their algorithms onto our website </span>
     
@@ -53,7 +53,7 @@
 
   <!-- Second page -->
   <header class="bgimg-2 w3-display-container w3-grayscale-min">
-    <div class="w3-display-left w3-text-white" style="padding:48px">
+    <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="how-to-use">How to use our website</span><br>
       <span class="w3-large" id="how-to-use">In order to use our website all you have to do is go under the Algorithm tab, on the navagation bar, and then it will take you to our Algorithm homepage where you can find a variety of algorithms to choose from. </span>
     
@@ -63,7 +63,7 @@
 
   <!-- Third page -->
   <header class="bgimg-3 w3-display-container w3-grayscale-min" >
-    <div class="w3-display-left w3-text-white" style="padding:48px">
+    <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="about-us">About us</span><br>
       <span class="w3-large" id="about-us">Front end developer/Algorithm designer: dillythecoder#3933 <br> Algorithm designer: Top Of Tech
   #4867<br> Front end developer/Algorithm Desginer: CodeZhifty#5155</span>
