--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <div class="topnav">
     <a class="active" href="index.html">Home</a>
     <a class = "active" href="algorithm.html">Algorithms</a>
-    <a class = "active" href="postalgorithm.html">Post your Algorithm</a>
+    <a class = "active" href="PostAlgorithm.html">Post your Algorithm</a>
   </div>
       <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
