--- a/src/PostAlgorithm.html
+++ b/src/PostAlgorithm.html
@@ -28,7 +28,7 @@
             <div class="topnav">
             <a class="active" href="index.html">Home</a>
             <a class = "active" href="algorithm.html">Algorithms</a>
-            <a class = "active" href="postalgorithm.html">Post your Algorithm</a>
+            <a class = "active" href="PostAlgorithm.html">Post your Algorithm</a>
         </div>
 
         <div id="form">
