Added eraser and saving buttons

--- a/src/drawing.html
+++ b/src/drawing.html
@@ -39,6 +39,8 @@
 
   <div class="underbar">
       <button class="clear">Clear</button>
+      <button class="erase">Erase</button>
+      <button class="save">Save</button>
 
       <div onclick="change_color('red');" class="red"></div>
       <div onclick="change_color('orange');" class="orange"></div>
