Testing codeeditor api

--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
       </div>
     </div>
    <div class="dropdown">
-      <button class="dropbtn">Stimulations
+      <button class="dropbtn">Simulations
         <i class=""></i>
       </button>
       <div class="dropdown-content">
         <a href="solarsystem.html">Solar System</a>
-      
+        
       </div>
     </div>
   </div>
