--- a/src/drawing.html
+++ b/src/drawing.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/drawing.css">
     <script src="js/transition.js"></script>
     <title>VizCDT</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/Favicon.png">
 </head>
 <body>
     <!-- Transition -->
