Removed algorithm stuff from nav bars

--- a/src/codeeditor.html
+++ b/src/codeeditor.html
@@ -14,26 +14,24 @@
 
   <div class="navbar">
     <a href="index.html">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">Algorithms
-        <i class=""></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="algorithm.html">Algorithm Homepage</a>
-        <a href="postalgorithm.html">Post your Algorithm</a>
-  
-      </div>
-    </div>
    <div class="dropdown">
-      <button class="dropbtn">Simulations
+      <button class="dropbtn">Stimulations
         <i class=""></i>
       </button>
       <div class="dropdown-content">
         <a href="solarsystem.html">Solar System</a>
-        
       </div>
     </div>
-  </div>
+  <div class="dropdown">
+      <button class="dropbtn">Tools
+        <i class=""></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="drawing.html">Drawing Editor</a>
+        <a href="audiovisualizer.html">Audio Visualizer</a>
+  
+      </div>
+    </div>
 
   <textarea name="code-editor" class="code-editor" cols="30" rows="10"></textarea>
 
