--- a/src/solarsystem.html
+++ b/src/solarsystem.html
@@ -12,6 +12,11 @@
   <script src="js/transition.js"></script>
   <!-- Favicon -->
   <link rel="shortcut icon" href="images/Favicon.png">
+  <style>
+      *{
+          overflow: hidden;
+      }
+  </style>
 </head>
 <body>
 <!-- Transition -->
@@ -38,4 +43,4 @@
     </div>
   </div>
 
-	<embed src="https://codezhifty.github.io/codezhifty/projects/solarsystem/index.html" style="width: 100vw; height: 100vh; border-radius: 20px;">
+	<embed src="https://codezhifty.github.io/codezhifty/projects/solarsystem/index.html" style="width: 100vw; height: 92vh;">
