--- a/src/audiovisualizer.html
+++ b/src/audiovisualizer.html
@@ -18,9 +18,13 @@
   <script src="js/transition.js"></script>
       <link rel="shortcut icon" href="images/Favicon.png">
     <style>
+        *{
+            overflow: hidden;
+            margin: 0;
+            padding: 0;
+        }
 
         body {
-            overflow: hidden;
             background: white;
         }
 
@@ -265,7 +269,6 @@
 </head>
 <body>
   <!-- Transition -->
-  <div class="transition is-active"></div>
 
   <div class="navbar">
     <a href="index.html">Home</a>
