Added coding to all navbars

--- a/src/solarsystem.html
+++ b/src/solarsystem.html
@@ -19,6 +19,15 @@
 
 <div class="navbar">
   <a href="index.html">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Coding 
+      <i class=""></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Coding Editor</a>
+
+    </div>
+  </div>
  <div class="dropdown">
     <button class="dropbtn">Stimulations
       <i class=""></i>
