--- a/src/codeeditor.html
+++ b/src/codeeditor.html
@@ -14,6 +14,15 @@
 
   <div class="navbar">
     <a href="index.html">Home</a>
+    <div class="dropdown">
+      <button class="dropbtn">Coding 
+        <i class=""></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Coding Editor</a>
+
+      </div>
+    </div>
    <div class="dropdown">
       <button class="dropbtn">Stimulations
         <i class=""></i>
@@ -29,7 +38,7 @@
       <div class="dropdown-content">
         <a href="drawing.html">Drawing Editor</a>
         <a href="audiovisualizer.html">Audio Visualizer</a>
-  
+
       </div>
     </div>
 
