Made basic functionality work

--- a/src/codeeditor.html
+++ b/src/codeeditor.html
@@ -45,7 +45,7 @@
   <textarea name="code-editor" class="code-editor" cols="30" rows="10"></textarea>
 
   <div class="output-box">
-    <p class="output">poop</p>
+    <p class="output">Output</p>
   </div>
 
   <button class="run">Run</button>
