--- a/src/codeeditor.html
+++ b/src/codeeditor.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-  <textarea name="code-editor" class="code-editor" cols="30" rows="10"></textarea>
+  <textarea name="editor" class="editor" cols="30" rows="10"></textarea>
 
   <div class="output-box">
     <p class="output">Output</p>
