--- a/src/audiovisualizer.html
+++ b/src/audiovisualizer.html
@@ -19,13 +19,17 @@
       <link rel="shortcut icon" href="images/Favicon.png">
     <style>
         *{
-            overflow: hidden;
             margin: 0;
             padding: 0;
         }
 
-        body {
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        body::-webkit-scrollbar {
+            display: none;
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
             background: white;
+            overflow: hidden;
         }
 
         .background {
@@ -33,7 +37,7 @@
 
             top: -50px;
             right: -50px;
-            bottom: -50px;
+            bottom: 0px;
             left: -50px;
 
             background-image: url("background.png");
@@ -104,6 +108,7 @@
             padding: 15px;
             color: white;
             font-size: 20px;
+            overflow: visible !important;
         }
 
         .fileButton:hover{
