--- a/src/audiovisualizer.html
+++ b/src/audiovisualizer.html
@@ -23,13 +23,8 @@
             padding: 0;
         }
 
-        /* Hide scrollbar for Chrome, Safari and Opera */
-        body::-webkit-scrollbar {
-            display: none;
-            -ms-overflow-style: none;  /* IE and Edge */
-            scrollbar-width: none;  /* Firefox */
-            background: white;
-            overflow: hidden;
+        body{
+            background-color: white;
         }
 
         .background {
