--- a/src/audiovisualizer.html
+++ b/src/audiovisualizer.html
@@ -18,13 +18,10 @@
   <script src="js/transition.js"></script>
       <link rel="shortcut icon" href="images/Favicon.png">
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
 
-        body{
-            background-color: white;
+        body {
+            overflow: hidden;
+            background: white;
         }
 
         .background {
@@ -103,7 +100,6 @@
             padding: 15px;
             color: white;
             font-size: 20px;
-            overflow: visible !important;
         }
 
         .fileButton:hover{
@@ -269,6 +265,7 @@
 </head>
 <body>
   <!-- Transition -->
+  <div class="transition is-active"></div>
 
   <div class="navbar">
     <a href="index.html">Home</a>
