--- a/src/drawing.html
+++ b/src/drawing.html
@@ -26,7 +26,7 @@
       </div>
     </div>
    <div class="dropdown">
-      <button class="dropbtn">Stimulations
+      <button class="dropbtn">Simulations
         <i class=""></i>
       </button>
       <div class="dropdown-content">
