--- a/src/audiovisualizer.html
+++ b/src/audiovisualizer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Solar System</title>
+  <title>VizCDT</title>
   <link rel="shortcut icon" href="logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
