--- a/src/drawing.html
+++ b/src/drawing.html
@@ -21,7 +21,7 @@
         <i class=""></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Coding Editor</a>
+        <a href="codeeditor.html">Coding Editor</a>
 
       </div>
     </div>
