--- a/src/audiovisualizer.html
+++ b/src/audiovisualizer.html
@@ -259,24 +259,17 @@
 </head>
 <body>
 <!-- Transition -->
+<div class="transition is-active"></div>
 
-<div class="navbar1">
+<div class="navbar">
   <a href="index.html">Home</a>
-  <div class="dropdown">
-    <button class="dropbtn">Coding 
-      <i class=""></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="codeeditor.html">Coding Editor</a>
-
-    </div>
-  </div>
  <div class="dropdown">
     <button class="dropbtn">Simulations
       <i class=""></i>
     </button>
     <div class="dropdown-content">
       <a href="solarsystem.html">Solar System</a>
+      <a href="audiovisualizer.html">Audio Visualizer</a>
     </div>
   </div>
 <div class="dropdown">
@@ -285,8 +278,7 @@
     </button>
     <div class="dropdown-content">
       <a href="drawing.html">Drawing Editor</a>
-      <a href="audiovisualizer.html">Audio Visualizer</a>
-
+      <a href="codeeditor.html">Coding Editor</a>
     </div>
   </div>
   <div>
