--- a/src/codeeditor.html
+++ b/src/codeeditor.html
@@ -12,36 +12,6 @@
     <!-- Transition -->
   <div class="transition is-active"></div>
 
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">Coding 
-        <i class=""></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="#">Coding Editor</a>
-
-      </div>
-    </div>
-   <div class="dropdown">
-      <button class="dropbtn">Simulations
-        <i class=""></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="solarsystem.html">Solar System</a>
-      </div>
-    </div>
-  <div class="dropdown">
-      <button class="dropbtn">Tools
-        <i class=""></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="drawing.html">Drawing Editor</a>
-        <a href="audiovisualizer.html">Audio Visualizer</a>
-
-      </div>
-    </div>
-
     <div class="backdrop">
       <div class="custom-area">
           <!-- Cloned text will go here -->
@@ -65,6 +35,28 @@
       <textarea class="input"></textarea>
       <button class="submit">Submit</button>
     </div>
+
+    <div class="navbar">
+      <a href="index.html">Home</a>
+     <div class="dropdown">
+        <button class="dropbtn">Simulations
+          <i class=""></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="solarsystem.html">Solar System</a>
+          <a href="audiovisualizer.html">Audio Visualizer</a>
+        </div>
+      </div>
+    <div class="dropdown">
+        <button class="dropbtn">Tools
+          <i class=""></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="drawing.html">Drawing Editor</a>
+          <a href="codeeditor.html">Coding Editor</a>
+  
+        </div>
+      </div>
   
     
   
