--- a/src/codeeditor.html
+++ b/src/codeeditor.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/codeeditor.css">
     <script src="js/transition.js"></script>
     <title>VizCDT</title>
+    <link rel="shortcut icon" href="images/Favicon.png">
 </head>
 <body>
     <!-- Transition -->
