Added weather visualizer to the navbar

--- a/src/solarsystem.html
+++ b/src/solarsystem.html
@@ -31,6 +31,7 @@
     <div class="dropdown-content">
       <a href="solarsystem.html">Solar System</a>
       <a href="audiovisualizer.html">Audio Visualizer</a>
+      <a href="weathervisualizer.html">Weather Visualizer</a>
     </div>
   </div>
 <div class="dropdown">
