--- a/src/index.html
+++ b/src/index.html
@@ -72,8 +72,7 @@
   <header class="bgimg-3 w3-display-container w3-grayscale-min" >
     <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="about-us">About us</span><br>
-      <span class="w3-large" id="about-us">This project wouldnt be possible by VizCDT's team.<br> dillythecoder#3933<br>Top Of Tech 
-      #4867<br> CodeZhifty#5155</span>
+      <span class="w3-large" id="about-us">This project wouldnt be possible by VizCDT's team.<br> dillythecoder#3933<br>Top Of Tech#4867<br> CodeZhifty#5155</span>
 
     </div> 
     <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
