--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
   <header class="bgimg-1 w3-display-container w3-grayscale-min" >
     <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="our-goal">Our goal</span><br>
-      <span class="w3-large" id="our-goal">Our goal is to create a free website that lets users visualize audio, space, weather, as well as a coding editor and drawing masterpieces.</span>
+      <span class="w3-large" id="our-goal">Our goal is to create a website that lets users get hands on experince with a vast amount of visualizations including, audio, space, and weather. We also added tools such as a coding editor and a drawing editor. </span>
     
     </div> 
     <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
@@ -62,7 +62,7 @@
   <header class="bgimg-2 w3-display-container w3-grayscale-min">
     <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="how-to-use">How to use our website</span><br>
-      <span class="w3-large" id="how-to-use">In order to use our website all you have to do is go to any of the pages on the navbar in which a drop down menu will pop up and you will be able to go to wherever you want. </span>
+      <span class="w3-large" id="how-to-use">In order to use our website all you have to do is go to any of the items on the navbar in which a drop down menu will pop up and you will be able to go to where you choose. </span>
     
     </div> 
     <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
@@ -72,7 +72,7 @@
   <header class="bgimg-3 w3-display-container w3-grayscale-min" >
     <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="about-us">About us</span><br>
-      <span class="w3-large" id="about-us">This project wouldnt be possible without VizCDT's team.<br> dillythecoder#3933<br>Top Of Tech#4867<br> CodeZhifty#5155</span>
+      <span class="w3-large" id="about-us">This project wouldnt be possible by VizCDT's team.<br> dillythecoder#3933<br>Top Of Tech#4867<br> CodeZhifty#5155</span>
 
     </div> 
     <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
