--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
   <header class="bgimg-1 w3-display-container w3-grayscale-min" >
     <div class="w3-display-left w3-text-white" style="padding:48px" data-aos="fade-bottom">
       <span class="w3-jumbo w3-hide-small" id="our-goal">Our goal</span><br>
-      <span class="w3-large" id="our-goal">Our goal is to create a website that lets users get hands on experince with a vast amount of visualizations including, audio, space, and weather. We also added tools such as a coding editor and a drawing editor. </span>
+      <span class="w3-large" id="our-goal">Our goal is to create a website that lets users get hands on experience with a vast amount of visualizations including, audio, space, and weather. We also added tools such as a coding editor and a drawing editor. </span>
     
     </div> 
     <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
