--- a/src/solarsystem.html
+++ b/src/solarsystem.html
@@ -44,5 +44,5 @@
 
     </div>
   </div>
-
+<script type="text/javascript">alert("Use WASD to move and use the mouse to look around your surrondings also make sure to click the stimulation before starting it so the mouse works well when you move.")</script>
 	<embed src="https://codezhifty.github.io/codezhifty/projects/solarsystem/index.html" style="width: 100vw; height: 94vh;">
